[gd_scene load_steps=44 format=2]

[ext_resource path="res://Camera2D.gd" type="Script" id=1]
[ext_resource path="res://RigidBody2D2.gd" type="Script" id=2]
[ext_resource path="res://RigidBody2D.gd" type="Script" id=3]
[ext_resource path="res://gear20.png" type="Texture" id=4]
[ext_resource path="res://gear10.png" type="Texture" id=5]
[ext_resource path="res://numbers.png" type="Texture" id=6]
[ext_resource path="res://numpad.png" type="Texture" id=7]
[ext_resource path="res://Keys.gd" type="Script" id=8]
[ext_resource path="res://download.png" type="Texture" id=9]
[ext_resource path="res://download (1).png" type="Texture" id=10]
[ext_resource path="res://asdf.png" type="Texture" id=11]
[ext_resource path="res://Gearquestion.png" type="Texture" id=12]
[ext_resource path="res://GearBackground.png" type="Texture" id=13]
[ext_resource path="res://KeypadBackground.png" type="Texture" id=14]
[ext_resource path="res://EndScreen.png" type="Texture" id=15]
[ext_resource path="res://blackbox.jpeg" type="Texture" id=16]
[ext_resource path="res://lever_arm.png" type="Texture" id=17]
[ext_resource path="res://lever_pivot.png" type="Texture" id=18]
[ext_resource path="res://StaticBody2D2.gd" type="Script" id=19]
[ext_resource path="res://ARIAL.TTF" type="DynamicFontData" id=20]
[ext_resource path="res://RightTorqueDisplay.gd" type="Script" id=21]
[ext_resource path="res://LeftTorqueDisplay.gd" type="Script" id=22]
[ext_resource path="res://LeverArm.gd" type="Script" id=23]
[ext_resource path="res://Room2code.png" type="Texture" id=24]
[ext_resource path="res://Instructions.png" type="Texture" id=25]
[ext_resource path="res://Instruct.gd" type="Script" id=26]

[sub_resource type="StreamTexture" id=1]
flags = 4
load_path = "res://.import/download.png-0fe1829d5b45fcf42c18266423ed01d8.stex"

[sub_resource type="TileSet" id=2]
0/name = "download.png 0"
0/texture = SubResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 64, 32, 16, 16 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "TempBlockj.tscn::1 1"
1/texture = SubResource( 1 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 64, 0, 64, 64 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "download.png 2"
2/texture = ExtResource( 9 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 0, 0, 64, 64 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 8, 8 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 6 )
region = Rect2( 8, 0, 8, 8 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 6 )
region = Rect2( 16, 0, 8, 8 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 6 )
region = Rect2( 24, 0, 8, 8 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 6 )
region = Rect2( 32, 0, 8, 8 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 6 )
region = Rect2( 40, 0, 8, 8 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 6 )
region = Rect2( 48, 0, 8, 8 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 6 )
region = Rect2( 56, 0, 8, 8 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 6 )
region = Rect2( 64, 0, 8, 8 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 6 )
region = Rect2( 72, 0, 8, 8 )

[sub_resource type="SpriteFrames" id=13]
animations = [ {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=14]
extents = Vector2( 8.60001, 8.5 )

[sub_resource type="RectangleShape2D" id=15]
extents = Vector2( 160.306, 85.8689 )

[sub_resource type="DynamicFont" id=16]
size = 38
font_data = ExtResource( 20 )

[sub_resource type="DynamicFont" id=17]
size = 38
font_data = ExtResource( 20 )

[node name="Node2D" type="Node2D"]

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 1750, 277 )
z_index = 1
current = true
smoothing_enabled = true
script = ExtResource( 1 )

[node name="TileMap" type="TileMap" parent="."]
position = Vector2( 513, 316 )
scale = Vector2( 1.02169, 1.09893 )
tile_set = SubResource( 2 )
format = 1
tile_data = PoolIntArray( -327650, 1, 0, -327649, 1, 0, -327648, 1, 0, -327647, 1, 0, -327646, 1, 0, -327645, 1, 0, -327644, 1, 0, -327643, 1, 0, -327642, 1, 0, -327641, 1, 0, -327640, 1, 0, -327639, 1, 0, -327638, 1, 0, -327637, 1, 0, -327636, 1, 0, -327635, 1, 0, -262114, 1, 0, -262113, 1, 0, -262102, 2, 0, -262101, 1, 0, -262100, 1, 0, -262099, 1, 0, -196578, 1, 0, -196577, 1, 0, -196575, 1, 0, -196574, 1, 0, -196573, 1, 0, -196570, 1, 0, -196569, 1, 0, -196568, 1, 0, -196566, 2, 0, -196565, 1, 0, -196564, 1, 0, -196563, 1, 0, -131042, 1, 0, -131041, 1, 0, -131039, 1, 0, -131038, 1, 0, -131037, 1, 0, -131034, 1, 0, -131033, 1, 0, -131032, 1, 0, -131030, 2, 0, -131029, 1, 0, -131028, 1, 0, -131027, 1, 0, -65516, 2, 0, -65506, 1, 0, -65505, 1, 0, -65503, 1, 0, -65502, 1, 0, -65501, 1, 0, -65498, 1, 0, -65497, 1, 0, -65496, 1, 0, -65494, 2, 0, -65493, 1, 0, -65492, 1, 0, -65491, 1, 0, 30, 1, 0, 31, 1, 0, 33, 1, 0, 34, 1, 0, 35, 1, 0, 38, 1, 0, 39, 1, 0, 40, 1, 0, 42, 2, 0, 43, 1, 0, 44, 1, 0, 45, 1, 0, 65566, 1, 0, 65567, 1, 0, 65568, 1, 0, 65569, 1, 0, 65570, 1, 0, 65571, 1, 0, 65572, 1, 0, 65573, 1, 0, 65574, 1, 0, 65575, 1, 0, 65576, 1, 0, 65577, 1, 0, 65578, 1, 0, 65579, 1, 0, 65580, 1, 0, 65581, 1, 0, 131102, 1, 0, 131103, 1, 0, 131104, 1, 0, 131105, 1, 0, 131106, 1, 0, 131107, 1, 0, 131108, 1, 0, 131109, 1, 0, 131110, 1, 0, 131111, 1, 0, 131112, 1, 0, 131113, 1, 0, 131114, 1, 0, 131115, 1, 0, 131116, 1, 0, 131117, 1, 0, 196638, 1, 0, 196639, 1, 0, 196640, 1, 0, 196641, 1, 0, 196642, 1, 0, 196643, 1, 0, 196644, 1, 0, 196645, 1, 0, 196646, 1, 0, 196647, 1, 0, 196648, 1, 0, 196649, 1, 0, 196650, 1, 0, 196651, 1, 0, 196652, 1, 0, 196653, 1, 0 )

[node name="20TGear" type="RigidBody2D" parent="."]
position = Vector2( 410, 408 )
mode = 1
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="20TGear"]
rotation = 1.5708
texture = ExtResource( 4 )

[node name="10TGear" type="RigidBody2D" parent="."]
position = Vector2( 650, 408 )
mode = 1
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="10TGear"]
position = Vector2( 2, 0.999878 )
rotation = -4.70017
texture = ExtResource( 5 )

[node name="Keypad" type="RigidBody2D" parent="."]
position = Vector2( 1783, 335 )
mode = 1
gravity_scale = 0.0

[node name="Sprite" type="Sprite" parent="Keypad"]
position = Vector2( 2, 1 )
texture = ExtResource( 7 )

[node name="Keys" type="RigidBody2D" parent="Keypad"]
position = Vector2( -58, -422 )
mode = 1
gravity_scale = 0.0
script = ExtResource( 8 )

[node name="1" type="AnimatedSprite" parent="Keypad/Keys"]
position = Vector2( -68, 244 )
scale = Vector2( 5, 5 )
frames = SubResource( 13 )
centered = false

[node name="1" type="Area2D" parent="Keypad/Keys/1"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Keypad/Keys/1/1"]
position = Vector2( 4.39999, 3.9 )
shape = SubResource( 14 )

[node name="2" type="AnimatedSprite" parent="Keypad/Keys"]
position = Vector2( 39, 244 )
scale = Vector2( 5, 5 )
frames = SubResource( 13 )
frame = 1
centered = false

[node name="2" type="Area2D" parent="Keypad/Keys/2"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Keypad/Keys/2/2"]
position = Vector2( 4.39999, 3.9 )
shape = SubResource( 14 )

[node name="3" type="AnimatedSprite" parent="Keypad/Keys"]
position = Vector2( 145, 244 )
scale = Vector2( 5, 5 )
frames = SubResource( 13 )
frame = 2
centered = false

[node name="3" type="Area2D" parent="Keypad/Keys/3"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Keypad/Keys/3/3"]
position = Vector2( 4.39999, 3.9 )
shape = SubResource( 14 )

[node name="4" type="AnimatedSprite" parent="Keypad/Keys"]
position = Vector2( -68, 350 )
scale = Vector2( 5, 5 )
frames = SubResource( 13 )
frame = 3
centered = false

[node name="4" type="Area2D" parent="Keypad/Keys/4"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Keypad/Keys/4/4"]
position = Vector2( 4.39999, 3.9 )
shape = SubResource( 14 )

[node name="5" type="AnimatedSprite" parent="Keypad/Keys"]
position = Vector2( 38, 350 )
scale = Vector2( 5, 5 )
frames = SubResource( 13 )
frame = 4
centered = false

[node name="5" type="Area2D" parent="Keypad/Keys/5"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Keypad/Keys/5/5"]
position = Vector2( 4.39999, 3.9 )
shape = SubResource( 14 )

[node name="6" type="AnimatedSprite" parent="Keypad/Keys"]
position = Vector2( 145, 350 )
scale = Vector2( 5, 5 )
frames = SubResource( 13 )
frame = 5
centered = false

[node name="6" type="Area2D" parent="Keypad/Keys/6"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Keypad/Keys/6/6"]
position = Vector2( 4.39999, 3.9 )
shape = SubResource( 14 )

[node name="7" type="AnimatedSprite" parent="Keypad/Keys"]
position = Vector2( -68, 457 )
scale = Vector2( 5, 5 )
frames = SubResource( 13 )
frame = 6
centered = false

[node name="7" type="Area2D" parent="Keypad/Keys/7"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Keypad/Keys/7/7"]
position = Vector2( 4.39999, 3.9 )
shape = SubResource( 14 )

[node name="8" type="AnimatedSprite" parent="Keypad/Keys"]
position = Vector2( 38, 457 )
scale = Vector2( 5, 5 )
frames = SubResource( 13 )
frame = 7
centered = false

[node name="8" type="Area2D" parent="Keypad/Keys/8"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Keypad/Keys/8/8"]
position = Vector2( 4.39999, 3.9 )
shape = SubResource( 14 )

[node name="9" type="AnimatedSprite" parent="Keypad/Keys"]
position = Vector2( 145, 457 )
scale = Vector2( 5, 5 )
frames = SubResource( 13 )
frame = 8
centered = false

[node name="9" type="Area2D" parent="Keypad/Keys/9"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Keypad/Keys/9/9"]
position = Vector2( 4.39999, 3.9 )
shape = SubResource( 14 )

[node name="0" type="AnimatedSprite" parent="Keypad/Keys"]
position = Vector2( 39, 562 )
scale = Vector2( 5, 5 )
frames = SubResource( 13 )
frame = 9
centered = false

[node name="0" type="Area2D" parent="Keypad/Keys/0"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Keypad/Keys/0/0"]
position = Vector2( 4.39999, 3.9 )
shape = SubResource( 14 )

[node name="Color" type="RigidBody2D" parent="Keypad/Keys"]
position = Vector2( 60, 129 )
scale = Vector2( 1.281, 0.6 )
z_index = 5
mode = 1

[node name="Red" type="Sprite" parent="Keypad/Keys/Color"]
z_index = 2
texture = ExtResource( 10 )

[node name="Color1" type="RigidBody2D" parent="Keypad/Keys"]
position = Vector2( 0, -1 )
scale = Vector2( 1.03627, 1.19422 )
mode = 1

[node name="Green" type="Sprite" parent="Keypad/Keys/Color1"]
position = Vector2( 57.8999, 116.813 )
scale = Vector2( 11.58, 2.06725 )
z_index = 2
texture = ExtResource( 11 )

[node name="EndScreen" type="StaticBody2D" parent="Keypad/Keys"]

[node name="Sprite" type="Sprite" parent="Keypad/Keys/EndScreen"]
position = Vector2( 27.5, 358.5 )
scale = Vector2( 1.02051, 1.08507 )
z_index = 7
texture = ExtResource( 15 )

[node name="GearQuestion" type="StaticBody2D" parent="."]
position = Vector2( -302, -18 )
scale = Vector2( 0.9, 0.9 )

[node name="Sprite" type="Sprite" parent="GearQuestion"]
position = Vector2( 672.501, 128 )
texture = ExtResource( 12 )

[node name="BackgroundGear" type="StaticBody2D" parent="."]

[node name="Sprite" type="Sprite" parent="BackgroundGear"]
position = Vector2( 513.75, 280.5 )
scale = Vector2( 16.3203, 17.5833 )
z_index = -1
texture = ExtResource( 13 )

[node name="KeypadBackground" type="StaticBody2D" parent="."]
scale = Vector2( 1.05042, 0.351346 )
z_index = -1

[node name="Sprite" type="Sprite" parent="KeypadBackground"]
position = Vector2( 1671.21, 788.866 )
scale = Vector2( 15.5452, -49.6241 )
texture = ExtResource( 14 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]
position = Vector2( 2998.5, 467.5 )
scale = Vector2( 3.26563, 0.809375 )

[node name="Blackbox" type="Sprite" parent="StaticBody2D"]
position = Vector2( 0, 72.278 )
scale = Vector2( 1, 0.548263 )
texture = ExtResource( 16 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 0, 70.4249 )
scale = Vector2( 1, 1 )
shape = SubResource( 15 )

[node name="PinJoint2D" type="PinJoint2D" parent="."]
position = Vector2( 2768, 330 )
scale = Vector2( 0.5, 0.5 )
node_a = NodePath("../RigidBody2D")
node_b = NodePath("../StaticBody2D2")

[node name="StaticBody2D2" type="StaticBody2D" parent="."]
position = Vector2( 2765.33, 341.333 )
scale = Vector2( 0.5, 0.5 )
script = ExtResource( 19 )

[node name="LeverPivot" type="Sprite" parent="StaticBody2D2"]
position = Vector2( 5.33301, 163.333 )
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 18 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D2"]
position = Vector2( 651.34, -16.666 )
polygon = PoolVector2Array( -668, 124, -624, 124, -624, 162, -634, 162, -634, 176, -602, 208, -602, 240, -688, 240, -688, 206, -656, 176, -656, 162, -668, 162 )

[node name="Right_Stone_Spawner" type="Position2D" parent="StaticBody2D2"]
position = Vector2( 963.34, -750 )

[node name="Left_Stone_Spawner" type="Position2D" parent="StaticBody2D2"]
position = Vector2( -264.66, -750 )

[node name="RightTorqueDisplay" type="RichTextLabel" parent="StaticBody2D2"]
margin_left = 1005.0
margin_top = -387.0
margin_right = 1485.0
margin_bottom = -151.0
custom_fonts/normal_font = SubResource( 16 )
script = ExtResource( 21 )

[node name="LeftTorqueDisplay" type="RichTextLabel" parent="StaticBody2D2"]
margin_left = -559.0
margin_top = -389.0
margin_right = -287.0
margin_bottom = -121.0
custom_fonts/normal_font = SubResource( 17 )
script = ExtResource( 22 )

[node name="RigidBody2D" type="RigidBody2D" parent="."]
position = Vector2( 2942, 326 )
mass = 10.0
script = ExtResource( 23 )

[node name="LeverArm" type="Sprite" parent="RigidBody2D"]
position = Vector2( -2, 65 )
texture = ExtResource( 17 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="RigidBody2D"]
position = Vector2( -173, 69 )
polygon = PoolVector2Array( -156, -31, 498, -31, 498, 24, 400, 25, 400, -2, -58, -2, -57, 23, -156, 24 )

[node name="Position2D" type="Position2D" parent="RigidBody2D"]
position = Vector2( 325, -27 )

[node name="Position2D2" type="Position2D" parent="RigidBody2D"]
position = Vector2( -329, -27 )

[node name="Position2D3" type="Position2D" parent="RigidBody2D"]
position = Vector2( -174, 0 )

[node name="SecretCode" type="Area2D" parent="RigidBody2D"]
physics_interpolation_mode = 1

[node name="Room2Code" type="Sprite" parent="RigidBody2D/SecretCode"]
physics_interpolation_mode = 1
position = Vector2( 30, -223 )
scale = Vector2( 0.300741, 0.307754 )
texture = ExtResource( 24 )

[node name="Instruct" type="Area2D" parent="."]
script = ExtResource( 26 )

[node name="Instructions" type="Sprite" parent="Instruct"]
position = Vector2( 2970, 98.0001 )
scale = Vector2( 0.309074, 0.307401 )
texture = ExtResource( 25 )

[connection signal="CurrentSceneNumber" from="Camera2D" to="20TGear" method="_on_Camera2D_CurrentSceneNumber"]
[connection signal="CurrentSceneNumber" from="Camera2D" to="Keypad/Keys" method="_on_Camera2D_CurrentSceneNumber"]
[connection signal="mouse_entered" from="Keypad/Keys/1/1" to="Keypad/Keys" method="_on_1_mouse_entered"]
[connection signal="mouse_exited" from="Keypad/Keys/1/1" to="Keypad/Keys" method="_on_1_mouse_exited"]
[connection signal="mouse_entered" from="Keypad/Keys/2/2" to="Keypad/Keys" method="_on_2_mouse_entered"]
[connection signal="mouse_exited" from="Keypad/Keys/2/2" to="Keypad/Keys" method="_on_2_mouse_exited"]
[connection signal="mouse_entered" from="Keypad/Keys/3/3" to="Keypad/Keys" method="_on_3_mouse_entered"]
[connection signal="mouse_exited" from="Keypad/Keys/3/3" to="Keypad/Keys" method="_on_3_mouse_exited"]
[connection signal="mouse_entered" from="Keypad/Keys/4/4" to="Keypad/Keys" method="_on_4_mouse_entered"]
[connection signal="mouse_exited" from="Keypad/Keys/4/4" to="Keypad/Keys" method="_on_4_mouse_exited"]
[connection signal="mouse_entered" from="Keypad/Keys/5/5" to="Keypad/Keys" method="_on_5_mouse_entered"]
[connection signal="mouse_exited" from="Keypad/Keys/5/5" to="Keypad/Keys" method="_on_5_mouse_exited"]
[connection signal="mouse_entered" from="Keypad/Keys/6/6" to="Keypad/Keys" method="_on_6_mouse_entered"]
[connection signal="mouse_exited" from="Keypad/Keys/6/6" to="Keypad/Keys" method="_on_6_mouse_exited"]
[connection signal="mouse_entered" from="Keypad/Keys/7/7" to="Keypad/Keys" method="_on_7_mouse_entered"]
[connection signal="mouse_exited" from="Keypad/Keys/7/7" to="Keypad/Keys" method="_on_7_mouse_exited"]
[connection signal="mouse_entered" from="Keypad/Keys/8/8" to="Keypad/Keys" method="_on_8_mouse_entered"]
[connection signal="mouse_exited" from="Keypad/Keys/8/8" to="Keypad/Keys" method="_on_8_mouse_exited"]
[connection signal="mouse_entered" from="Keypad/Keys/9/9" to="Keypad/Keys" method="_on_9_mouse_entered"]
[connection signal="mouse_exited" from="Keypad/Keys/9/9" to="Keypad/Keys" method="_on_9_mouse_exited"]
[connection signal="mouse_entered" from="Keypad/Keys/0/0" to="Keypad/Keys" method="_on_0_mouse_entered"]
[connection signal="mouse_exited" from="Keypad/Keys/0/0" to="Keypad/Keys" method="_on_0_mouse_exited"]
